<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_copy"
          android:title="@string/menuOptionCopy"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_paste"
          android:title="@string/menuOptionPaste"
          android:orderInCategory="200"
          app:showAsAction="never"/>
    <item android:id="@+id/action_load"
          android:title="@string/menuOptionLoadKey"
          android:orderInCategory="300"
          app:showAsAction="never"/>
    <item android:id="@+id/action_example"
          android:title="@string/menuOptionExample"
          android:orderInCategory="400"
          app:showAsAction="never"/>
    <item android:id="@+id/action_clean"
          android:title="@string/menuOptionClean"
          android:orderInCategory="500"
          app:showAsAction="never"/>
    <item android:id="@+id/action_send"
          android:title="@string/menuOptionSend"
          android:orderInCategory="600"
          app:showAsAction="never"/>
</menu>